--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 body {
-  background: #cccccc;
+  background: #e0e0e0;
   font-size: 2em;
   font-family: sans-serif;
   margin: 0;
@@ -7,6 +7,6 @@ body {
 }
 
 nav {
-  background: #a1a1a1;
+  background: #da2a2a;
   box-shadow: 0 2px 8px rgb(0, 0, 0);
 }
